<resources>
    <string name="app_name">Moodify</string>
    <string name="moodify">Moodify</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="click_here"> Click here</string>
    <string name="fullname">Fullname</string>
    <string name="input_your_name">Input your name</string>
    <string name="email">Email</string>
    <string name="input_your_email">Input your email</string>
    <string name="password">Password</string>
    <string name="input_your_password">Input your password</string>
    <string name="create">Create</string>
    <string name="or_login_with">Or login with</string>
    <string name="google">Google</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="privacy_and_policy">In using this service, I acknowledge and accept the applicable terms and conditions and privacy policy.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_menu_1">Your loyal friend for your mental health</string>
    <string name="title_menu_2">Manage stress, increase happiness.</string>
    <string name="title_menu_3">Manage stress, increase happiness.</string>
    <string name="desc_menu_1">This app provides various features to help you manage your mental health.</string>
    <string name="desc_menu_2">Make your days more productive and motivated with the help of meditation tools.</string>
    <string name="desc_menu_3">Make your days more productive and motivated with the help of meditation tools.</string>
    <string name="next">Next</string>
    <string name="my_journal">My Journal</string>
    <string name="desc_journal_2">Fill in your journal according to the questions</string>
    <string name="desc_journal_3">You can fill it according to these points:</string>
    <string name="desc_journal_4">• How do you feel today?</string>
    <string name="desc_journal_5">• Since when have you experienced this feeling?</string>
    <string name="desc_journal_6">• Where do you get that feeling?</string>
    <string name="desc_journal_7">Write your answer in at least 30 characters</string>
    <string name="type_your_answer_here">Type your answer here...</string>
    <string name="you_re_feeling">You\'re \nfeeling</string>
    <string name="mindfull_meditation">Mindfull\nMeditation</string>
    <string name="woa_1">I am turning DOWN the volume of negativity in my life, while simultaneously turning UP the volume of positivity.</string>
    <string name="start">start</string>
    <string name="doing_box_breathing">Doing Box Breathing</string>
    <string name="instruction_coping_tools">Step One:Breathe in through the nose for a count of 4.\nStep Two:Hold breath for a count of 4.\nStep Three:Breath out for a count of 4.\nStep Four:Hold breath for a count of 4.\nRepeat 3 times</string>
    <string name="halaman_1">1/5</string>
    <string name="halaman_2">2/5</string>
    <string name="prev">Prev</string>
    <string name="listening_session_1">Listening Session #1</string>
    <string name="halaman_3">3/5</string>
    <string name="listening_session_2">Listening Session #2</string>
    <string name="halaman_4">4/5</string>
    <string name="woa_2">I finish what matters and let go of what does not.</string>
    <string name="halaman_5">5/5</string>
    <string name="finish">Finish</string>
    <string name="other_title">Other</string>
</resources>