<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MyJournalActivity">

    <TextView
        android:id="@+id/tvMyJournal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/my_journal"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descJournal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/desc_journal_2"
        android:textColor="@color/abu"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMyJournal" />

    <TextView
        android:id="@+id/descJournal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/desc_journal_3"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descJournal2" />

    <TextView
        android:id="@+id/descJournal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/desc_journal_4"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descJournal3" />

    <TextView
        android:id="@+id/descJournal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/desc_journal_5"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descJournal4" />

    <TextView
        android:id="@+id/descJournal6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/desc_journal_6"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descJournal5" />

    <TextView
        android:id="@+id/descJournal7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/desc_journal_7"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descJournal6" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvJournal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        app:cardBackgroundColor="#EEEEEE"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descJournal7">

        <EditText
            android:id="@+id/etJournal"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/nunito_sans_bold"
            android:gravity="top|start"
            android:hint="@string/type_your_answer_here"
            android:padding="16dp"
            android:textColorHint="#7D7D7D"
            android:textSize="14sp"
            android:maxLength="100"
            />

        <TextView
            android:id="@+id/count_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:alpha="0.8"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/100"
            android:alpha="0.8"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:enabled="false"
        android:background="@drawable/submit_myjournal_btn"
        android:backgroundTint="@color/aqua"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="Submit"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>